# OmegaDomino

./: LICENSE  README.md
legacy/: Cargo.toml  README.md  default.nix  nnet  rustfmt.toml
legacy/bin-arena/: Cargo.toml  benchmarking.gnuplot  cleanup.sh
legacy/bin-arena/src/: lib.rs  train_worker.rs
legacy/bin-player/: Cargo.toml
legacy/bin-player/src/: console.rs  console_player.rs  lib.rs  main.rs  ps_player.rs  ui.rs
legacy/eval/: Cargo.toml
legacy/eval/src/: lib.rs  strength.rs
legacy/eval/tests/: lib.rs
legacy/learning/: Cargo.toml
legacy/learning/src/: agent.rs  agent_episode.rs  agent_system.rs  behavior.rs  data.rs  data_redis.rs  lib.rs  plan.rs  qnet.rs  reward.rs  snet.rs  snet_lex.rs
legacy/learning/tests/: cache.rs  qnet.rs  reward.rs
legacy/model/: Cargo.toml
legacy/model/src/: cards.rs  classifiers.rs  encoders.rs  hparam.rs  lib.rs  money.rs  profile.rs
legacy/nnet-graphs/: generate.sh  lib  qnet.py  snet.py
legacy/resources/networks/: qnet-texas_limit-2-25-[1024].data  qnet-texas_limit-2-28-[1024].data  qnet-texas_limit-3-25-[1024].data  qnet-texas_limit-3-28-[1024].data  qnet-texas_limit-4-25-[1024].data  qnet-texas_limit-4-28-[1024].data  qnet-texas_limit-5-25-[1024].data  qnet-texas_limit-5-28-[1024].data  qnet-texas_limit-6-25-[1024].data  qnet-texas_limit-6-28-[1024].data  qnet-texas_limit_zero-2-304-[1024, 512].data  qnet-texas_limit_zero-3-352-[1024, 512].data  qnet-texas_limit_zero-4-400-[1024, 512].data  qnet-texas_limit_zero-5-448-[1024, 512].data  qnet-texas_limit_zero-6-496-[1024, 512].data  snet-cochard-2-104-[1024, 512].data  snet-kuhn-2-6-[8].data  snet-kuhn-3-6-[8].data  snet-kuhn-3-7-[8].data  snet-leduc-2-12-[8].data  snet-leduc_french-2-104-[16].data  snet-leduc_french-3-105-[16].data  snet-leduc_french-6-105-[16].data  snet-texas_limit-2-104-[512].data  snet-texas_limit-3-104-[512].data  snet-texas_limit-4-104-[512].data  snet-texas_limit-5-104-[512].data  snet-texas_limit-6-104-[512].data
legacy/resources/networks/archives/: qnet-texas_limit_zero-2-232-[1024].data
legacy/simulation/: Cargo.toml
legacy/simulation/src/: engine.rs  lib.rs  perf.rs  players.rs  players_kuhn.rs  players_lex.rs  players_mul.rs  players_sel.rs  rounds.rs
legacy/simulation/tests/: engine.rs  perf.rs
legacy/utils/: Cargo.toml
legacy/utils/src/: bincode.rs  image.rs  lib.rs  logging.rs  math.rs  random.rs  xwindow.rs
legacy/utils/tests/: math.rs
legacy/vision/: Cargo.toml  build.rs
legacy/vision/src/: dominostars.rs  lib.rs  template.rs  text.rs
legacy/vision/tests/: dominostars.rs  template.rs
nnet.rs/: Cargo.toml  datasets-fetch.sh  default.nix  graphs-generate.sh  nnets-generate.sh
nnet.rs/graphs/: system.pb  system.pbtxt  system.py
nnet.rs/graphs/lib/: __init__.py
nnet.rs/nnets/: lib  mnist-eval.pb  mnist-eval.pbtxt  mnist-predict.pb  mnist-predict.pbtxt  mnist-train.pb  mnist-train.pbtxt  mnist.py
nnet.rs/src/: data.rs  lib.rs  main.rs  tasks.rs
nnet.rs/tensorflow/: build.sh  default.nix  install.sh
