[package]
name = "anna-player"
version = "0.0.0"
authors = ["Anonymous"]

[dependencies]
env_logger                = "0.4.0"
image                     = "0.23"
log                       = "0.3"
ncurses                   = "5.98"
num-traits                = "0.1"
rand                      = "0.5"
x11                       = "2.17"
anna-eval                 = { path = "../eval" }
anna-learning             = { path = "../learning" }
anna-simulation           = { path = "../simulation" }
anna-model                = { path = "../model" }
anna-utils                = { path = "../utils" }
anna-vision               = { path = "../vision" }
nnet                      = { path = "../nnet" }
