[package]
name = "anna-vision"
version = "0.0.0"
authors = ["Anonymous"]
build = "build.rs"

[dependencies]
image                     = "0.23.11"
imageproc                 = "0.21"
rayon                     = "0.8"
anna-model             = { path = "../model" }
anna-utils             = { path = "../utils" }
